added infos to ShowFpsSystem